--- a/app/src/main/res/layout/game_page.xml
+++ b/app/src/main/res/layout/game_page.xml
@@ -244,71 +244,78 @@
             android:id="@+id/table_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleX="1.3"
+            android:scaleY="1.6"
             android:contentDescription="@string/imagen_de_una_mesa"
             android:src="@drawable/game_table" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/object_constraints"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/table_image">
+            android:layout_width="451dp"
+            android:layout_height="165dp"
+            android:layout_marginTop="-30dp">
 
-            <ImageView
-                android:id="@+id/object_1"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:contentDescription="Herramienta 1"
-                android:src="@drawable/tool_1"
-                app:layout_constraintEnd_toStartOf="@+id/object_2"
-                app:layout_constraintHorizontal_chainStyle="packed"
+            <LinearLayout
+                android:id="@+id/tools_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/object_2"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:contentDescription="Herramienta 2"
-                android:src="@drawable/tool_2"
-                app:layout_constraintEnd_toStartOf="@+id/object_3"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toEndOf="@+id/object_1"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/object_3"
-                android:layout_width="70dp"
-                android:layout_height="60dp"
-                android:contentDescription="Herramienta 3"
-                android:src="@drawable/tool_3"
-                app:layout_constraintEnd_toStartOf="@+id/object_4"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toEndOf="@+id/object_2"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/object_4"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:contentDescription="Herramienta 4"
-                android:src="@drawable/tool_4"
-                app:layout_constraintEnd_toStartOf="@+id/object_5"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toEndOf="@+id/object_3"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/object_5"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:contentDescription="Herramienta 5"
-                android:src="@drawable/tool_5"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toEndOf="@+id/object_4"
-                app:layout_constraintTop_toTopOf="parent" />
+                >
+
+                <ImageView
+                    android:id="@+id/hard_scraper"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:contentDescription="Rasqueta dura."
+                    android:src="@drawable/tool_1"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginStart="40dp"
+                    />
+
+                <ImageView
+                    android:id="@+id/soft_scraper"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:contentDescription="Rasqueta blanda."
+                    android:src="@drawable/tool_2"
+                    android:layout_marginEnd="40dp"
+                    />
+
+                <ImageView
+                    android:id="@+id/hoof_pick"
+                    android:layout_width="90dp"
+                    android:layout_height="80dp"
+                    android:contentDescription="Escarba-vasos."
+                    android:src="@drawable/tool_3" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tools_group"
+                app:layout_constraintEnd_toEndOf="parent"
+                >
+
+                <ImageView
+                    android:id="@+id/soft_brush"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:contentDescription="Cepillo blando."
+                    android:src="@drawable/tool_4"
+                    android:layout_marginEnd="80dp"
+                    android:layout_marginStart="20dp"
+                    />
+
+                <ImageView
+                    android:id="@+id/hard_brush"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:contentDescription="Cepillo duro."
+                    android:src="@drawable/tool_5" />
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
