--- a/app/src/main/res/layout/game_page.xml
+++ b/app/src/main/res/layout/game_page.xml
@@ -5,8 +5,21 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_game"
     android:clipChildren="false"
-    android:clipToPadding="false"
-    >
+    android:clipToPadding="false">
+
+    <View
+        android:id="@+id/redOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#76E70202"
+        android:visibility="gone" />
+
+    <View
+        android:id="@+id/greenOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#7601950F"
+        android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top_menu"
@@ -21,12 +34,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             android:background="@drawable/top_menu_background"
-            >
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <LinearLayout
             android:id="@+id/button_group_game"
             android:layout_width="wrap_content"
@@ -90,7 +103,7 @@
 
                 <TextView
                     android:id="@+id/total_time"
-                    android:layout_width="45dp"
+                    android:layout_width="55dp"
                     android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:background="@drawable/button_background"
@@ -106,8 +119,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:orientation="vertical"
                 android:clipChildren="false"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/error_constraint"
                 app:layout_constraintStart_toEndOf="@+id/time_constraint"
@@ -118,9 +131,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="10dp"
                     android:fontFamily="@font/comixloud"
                     android:text="@string/facil_game"
-                    android:layout_marginBottom="10dp"
                     android:textColor="@color/dark_orange"
                     android:textSize="12sp" />
 
@@ -131,8 +144,7 @@
                     android:layout_height="20dp"
                     android:max="100"
                     android:progress="0"
-                    android:progressTint="@color/dark_orange"
-                    />
+                    android:progressTint="@color/dark_orange" />
             </LinearLayout>
 
             <LinearLayout
@@ -157,7 +169,7 @@
 
                 <TextView
                     android:id="@+id/error_value"
-                    android:layout_width="45dp"
+                    android:layout_width="55dp"
                     android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:background="@drawable/button_background"
@@ -210,43 +222,154 @@
         android:id="@+id/btn_hint"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        app:tint="@color/white"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="15dp"
-        android:src="@drawable/ic_question_mark"
         android:background="@drawable/button_background"
         android:contentDescription="@string/pista_game"
+        android:src="@drawable/ic_question_mark"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:tint="@color/white" />
 
-    <ImageView
-        android:id="@+id/horse_image"
+    <FrameLayout
         android:layout_width="400dp"
         android:layout_height="340dp"
-        android:contentDescription="@string/imagen_de_un_caballo"
-        android:src="@drawable/horse_game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintVertical_bias="0.99">
+
+        <ImageView
+            android:id="@+id/horse_image"
+            android:layout_width="400dp"
+            android:layout_height="340dp"
+            android:contentDescription="@string/imagen_de_un_caballo"
+            android:src="@drawable/horse_game" />
+
+        <ImageView
+            android:id="@+id/dirtyHead"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyNeck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyShoulder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyBelly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyHaunch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyFrontLegs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyHindLegs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyGroin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyWholeBody"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyTail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyHooves1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyHooves2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/dirtyHooves3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dirty"
+            android:visibility="gone" />
+
+
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/table_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/table_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/imagen_de_una_mesa"
             android:scaleX="1.3"
             android:scaleY="1.6"
-            android:contentDescription="@string/imagen_de_una_mesa"
             android:src="@drawable/game_table" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -259,29 +382,26 @@
                 android:id="@+id/tools_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                >
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/hard_scraper"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:contentDescription="Rasqueta dura."
-                    android:src="@drawable/tool_1"
-                    android:layout_marginEnd="40dp"
                     android:layout_marginStart="40dp"
-                    />
+                    android:layout_marginEnd="40dp"
+                    android:contentDescription="Rasqueta dura."
+                    android:src="@drawable/tool_1" />
 
                 <ImageView
                     android:id="@+id/soft_scraper"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:contentDescription="Rasqueta blanda."
-                    android:src="@drawable/tool_2"
                     android:layout_marginEnd="40dp"
-                    />
+                    android:contentDescription="Rasqueta blanda."
+                    android:src="@drawable/tool_2" />
 
                 <ImageView
                     android:id="@+id/hoof_pick"
@@ -294,20 +414,18 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tools_group"
                 app:layout_constraintEnd_toEndOf="parent"
-                >
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tools_group">
 
                 <ImageView
                     android:id="@+id/soft_brush"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:contentDescription="Cepillo blando."
-                    android:src="@drawable/tool_4"
-                    android:layout_marginEnd="80dp"
                     android:layout_marginStart="20dp"
-                    />
+                    android:layout_marginEnd="80dp"
+                    android:contentDescription="Cepillo blando."
+                    android:src="@drawable/tool_4" />
 
                 <ImageView
                     android:id="@+id/hard_brush"
